--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "epickfail/bx24",
+    "name": "systech/bx24",
     "description": "SDK for REST API Bitrix24",
     "authors": [
         {
