--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
 	"php": ">=5.4.0"	
 	},
     "autoload": {
-	"classmap": ["src"]
-	}
+	  "psr-4": {
+            "BX24\\": "src"
+        }
+    }
 }
